manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklite-backend
  namespace: tasklite
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: tasklite-backend
  template:
    metadata:
      labels:
        app: tasklite-backend
    spec:
      containers:
      - name: backend
        image: iscra56/tasklite-api:1.1
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "150m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: tasklite-backend-service
  namespace: tasklite
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: tasklite-backend
