manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: tasklite
spec:
  podSelector:
    matchLabels:
      app: tasklite-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tasklite-backend
    ports:
    - protocol: TCP
      port: 5432
